--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
-<pre>
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      body {
+        background: #0fbeef;
+      }
+    </style>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Welcome to <STRONG>CHONKY.CAT</STRONG></h1>
+    </header>
+
+    <pre>
+es
 
 
     .
@@ -26,6 +42,9 @@ __________((  _.'__       .-'  J              _.-'   .'        `. \
                        `----'`---------'----'
 
 
-</pre>
+</pre
+    >
 
-<p>I'm a kitty cat</p>
+    <p>I'm a kitty cat</p>
+  </body>
+</html>
