Added hash routing

--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
     <header>
       <h1>Welcome to <STRONG>CHONKY.CAT</STRONG></h1>
     </header>
-
-    <pre>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#cats-of-the-internet">Cats of the internet</a></li>
+        <li><a href="#leon-the-cat">Leon the Cat</a></li>
+        <li><a href="#guestbook">Guestbook</a></li>
+      </ul>
+    </nav>
+    <main>
+      <section id="home">
+        <pre>
 es
 
 
@@ -43,8 +52,21 @@ __________((  _.'__       .-'  J              _.-'   .'        `. \
 
 
 </pre
-    >
+        >
 
-    <p>I'm a kitty cat</p>
+        <p>I'm a kitty cat</p>
+      </section>
+      <section id="cats-of-the-internet">
+        <p>cats of the internet</p>
+      </section>
+      <section id="leon-the-cat">
+        <p>leon the cat</p>
+      </section>
+      <section id="guestbook">
+        <p>guestbook</p>
+      </section>
+    </main>
+    <footer>Copyright 2019 Cat</footer>
+    <script src="index.js"></script>
   </body>
 </html>
